--- a/poem.html
+++ b/poem.html
@@ -211,6 +211,11 @@ On every golden scale!</p>
 <div id="second-verse" class="section level2">
 <h2>Second Verse</h2>
 <!--Put the first five lines of a poem by Robert Frost here!-->
+<p>Two roads diverged in a yellow wood,<br />
+And sorry I could not travel both<br />
+And be one traveler, long I stood<br />
+And looked down one as far as I could<br />
+To where it bent in the undergrowth;</p>
 </div>
 <div id="third-verse" class="section level2">
 <h2>Third Verse</h2>
